--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "ethereum-cryptography": "^2.0.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.22"
   },
   "devDependencies": {
     "concurrently": "^8.0.1"
