--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "ethereum-cryptography": "^2.0.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.22"
